fix : removed scrollbars

--- a/professor_oak/src/scss/commons.scss
+++ b/professor_oak/src/scss/commons.scss
@@ -16,3 +16,16 @@ body{
 .debug2{
   border: 1px solid white;
 }
+
+.overflow{
+  overflow-y: scroll;
+}
+
+.scrollbar::-webkit-scrollbar{
+  display: none;
+}
+.scrollbar{
+  // -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
